--- a/RESTful-master/RestfulService.Web/Views/Shared/_Layout.cshtml
+++ b/RESTful-master/RestfulService.Web/Views/Shared/_Layout.cshtml
@@ -1,16 +1,27 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    
     <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    @*@Styles.Render("~/Content/css")*@
+    @*position:fixed;*@
+    @*@Scripts.Render("~/bundles/modernizr") *@
 </head>
-<body>
-    @RenderBody()
-   <p>Hello World</p>
-    @Scripts.Render("~/>bundles/jquery")
+<body>      
+    <header style="width:100%;background:black">
+        <div class="content-wrapper">
+            <p style ="font-family: cursive;color: white;text-align:center;line-height:100px;font-size:18px">Restful service-jqgrid sample</p>
+        </div>
+    </header>    
+   
+     @RenderBody()
+
+    <footer style="position:fixed;left:0px;bottom:0px;height:50px;width:100%;background:black">
+        <div class="content-wrapper">            
+               <p style="float:right;font-family: cursive;color: white">Created by:Ravi Kukreja</p>           
+        </div>
+    </footer>  
+    @*@Scripts.Render("~/>bundles/jquery")*@
     @RenderSection("scripts", required: false)
 </body>
 </html>
